crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_fold__pair_first.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_fold.rs
expression: fixture.snapshot()
---
--- unoptimized Core
fstPair (con (pair integer bytestring) (7, #61))
--- unoptimized UPLC
(program 1.1.0
  [(force (force (builtin fstPair))) (con (pair integer bytestring) (7, #61))])
--- optimized Core
7
--- optimized UPLC
(program 1.1.0 (con integer 7))
--- result
(con integer 7)
--- logs
[]
--- budget
cpu: 221995, memory: 632
