crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_fold__serialise_data.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_fold.rs
expression: fixture.snapshot()
---
--- unoptimized Core
serialiseData (con data (I 7))
--- unoptimized UPLC
(program 1.1.0 [(builtin serialiseData) (con data (I 7))])
--- optimized Core
serialiseData (con data (I 7))
--- optimized UPLC
(program 1.1.0 [(builtin serialiseData) (con data (I 7))])
--- result
(con bytestring #07)
--- logs
[]
--- budget
cpu: 2070166, memory: 410
